--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+#root {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-color: #0080ff; /* Light gray background */
+}
